# PointCloudFiltering

./: CMakeLists.txt  OpenniFilter.cpp  OpenniFilter.h  main.cpp  openni_grabber.cpp
